single delete button added

--- a/index.html
+++ b/index.html
@@ -31,10 +31,15 @@
       <button onclick="addToDisplay('/')">/</button>
       <br />
       <button onclick="clearScreen()">C</button>
-      <button onclick="singleDelete()">Del</button>
+      <button onclick="singleDelete()">
+        <i class="fa-solid fa-delete-left" style="color: #000; background-color: transparent;"></i>
+      </button>
       <button class="colors" onclick="calculate()">=</button>
     </div>
-
+    <script
+      src="https://kit.fontawesome.com/78a022c79b.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="app.js"></script>
   </body>
 </html>
